adding triger and modifying JMeter Tests

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -1,3 +1,13 @@
+trigger:
+  branches:
+    include:
+    - main
+  paths:
+    exclude:
+    - README.md
+    - .gitignore
+    - images/
+
 name: Azure Pipelines
 variables:
   python.version: "3.7.6"
@@ -158,6 +168,63 @@ stages:
                 targetPath: '$(System.DefaultWorkingDirectory)/log/selenium/selenium-test.log'
                 artifactName: 'drop-selenium-logs'
 
+    - job: test_jmeter
+      displayName: Test JMeter
+      pool:
+        vmImage: 'ubuntu-18.04'
+      steps:
+      - bash: |
+          sudo apt-get install openjdk-11-jre-headless -y
+          java -version
+          wget https://archive.apache.org/dist/jmeter/binaries/apache-jmeter-5.4.tgz -O jmeter.tgz
+          tar xzvf jmeter.tgz
+          apache-jmeter-5.4/bin/jmeter --version
+          # create log directory
+          mkdir -p log/jmeter
+          pwd
+          ls -la
+        displayName: Install JMeter
+      - bash: |
+          apache-jmeter-5.4/bin/jmeter -n -t jmeter/StressTestSuitev2.jmx \
+                                       -l log/jmeter/stress-test-result.csv \
+                                       -e -f -o log/jmeter/stress-test-html-report \
+                                       -j log/jmeter/jmeter-stress-test.log
+        displayName: JMeter stress test
+      - bash: |
+          apache-jmeter-5.4/bin/jmeter -n -t jmeter/EnduranceTestSuitev2.jmx \
+                                       -l log/jmeter/endurance-test-result.csv \
+                                       -e -f -o log/jmeter/endurance-test-html-report \
+                                       -j log/jmeter/jmeter-endurance-test.log
+        displayName: JMeter endurance test
+      - task: ArchiveFiles@2
+        displayName: Archive JMeter stress test HTML report
+        inputs:
+          rootFolderOrFile: '$(System.DefaultWorkingDirectory)/log/jmeter/stress-test-html-report'
+          includeRootFolder: false
+          archiveType: 'zip'
+          archiveFile: '$(System.DefaultWorkingDirectory)/log/jmeter/stress-test-html-report-$(Build.BuildId).zip'
+          verbose: true
+      - task: ArchiveFiles@2
+        displayName: Archive JMeter endurance test HTML report
+        inputs:
+          rootFolderOrFile: '$(System.DefaultWorkingDirectory)/log/jmeter/endurance-test-html-report'
+          includeRootFolder: false
+          archiveType: 'zip'
+          archiveFile: '$(System.DefaultWorkingDirectory)/log/jmeter/endurance-test-html-report-$(Build.BuildId).zip'
+          verbose: true
+      - bash: |
+          rm -rf log/jmeter/stress-test-html-report
+          rm -rf log/jmeter/endurance-test-html-report
+          cd log/jmeter
+          pwd
+          ls -la
+        displayName: Delete original JMeter test HTML reports
+      - task: PublishPipelineArtifact@1
+        displayName: Publish JMeter logs
+        inputs:
+          targetPath: '$(System.DefaultWorkingDirectory)/log/jmeter'
+          artifactName: 'drop-jmeter-logs'
+
 
   - stage: IntegrationTests
     displayName: Integration Tests
@@ -198,47 +265,4 @@ stages:
           testResultsFormat: 'JUnit'
           testResultsFiles: '$(System.DefaultWorkingDirectory)/Results/*.xml'
 
-  - stage: JMeterTests
-    displayName: JMeter Tests
-    jobs:
-    - job: JMeterTests
-      displayName: JMeterTests
-      steps: 
-
-      - task: JMeterInstaller@0
-        displayName: 'Install JMeter 5.2.1'
-        inputs:
-          jmeterVersion: '5.2.1'
-
-      - task: Bash@3
-        displayName: 'Endurance Test Suite'
-        inputs:
-          targetType: 'inline'
-          script: 'jmeter -n -t jmeter/EnduranceTestSuitev2.jmx  -l endurance-test-report/endurance-results.jtl  -e -o endurance-test-report'
-      
-      - task: publishhtmlreport@1
-        displayName: 'Publish Endurance Test Results'
-        inputs:
-          htmlType: 'Jmeter'
-          JmeterReportsPath: '$(Build.SourcesDirectory)/endurance-test-report'
-      
-      - task: Bash@3
-        displayName: 'Stress Test Suite'
-        inputs:
-          targetType: 'inline'
-          script: 'jmeter -n -t jmeter/StressTestSuitev2.jmx  -l stress-test-report/stress-results.jtl -e -o stress-test-report'
-      
-      - task: publishhtmlreport@1
-        displayName: 'Publish Stress Test Results'
-        inputs:
-          htmlType: 'Jmeter'
-          JmeterReportsPath: '$(Build.SourcesDirectory)/stress-test-report'
-      
-      - task: Bash@3
-        displayName: 'Print Performance Test Logs'
-        inputs:
-          targetType: 'inline'
-          script: |
-              ls -lah endurance-test-report/
-              ls -lah stress-test-report/
-              cat jmeter.log
+          
