--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -189,8 +189,8 @@ stages:
                   chromium-browser -version
                   chromedriver --version
                   # agent log analytics
-                  #wget https://raw.githubusercontent.com/Microsoft/OMS-Agent-for-Linux/master/installer/scripts/onboard_agent.sh && sh onboard_agent.sh -w 5c9b651a-3c93-46b7-8674-5d2cf2ad0e75 -s apaaCBe3AAFQkC3vUig+WFesWkbP4T+/as1Q9AA2XNX1nf5STgdLOzdZTrf8PEYAhAWPhZU5Mu3Ka/778FlRZg== -d opinsights.azure.com
-                  #sudo /opt/microsoft/omsagent/bin/service_control restart 5c9b651a-3c93-46b7-8674-5d2cf2ad0e75
+                  wget https://raw.githubusercontent.com/Microsoft/OMS-Agent-for-Linux/master/installer/scripts/onboard_agent.sh && sh onboard_agent.sh -w ba2f2875-7939-40f7-8fab-9fdfe5774935 -s rb9iiVdW/SUHbVCH4V83NX16EgaXKTEtX7WfGSxykJ3iCaZ/Tm/FFqigsvOAUajQZM0L5k9vAnyM3lD4Iv61cw== -d opinsights.azure.com
+                  sudo /opt/microsoft/omsagent/bin/service_control restart ba2f2875-7939-40f7-8fab-9fdfe5774935
             - download: current
               displayName: 'Download Selenium'
               artifact: selenium
